--- a/session-adminpanel/package.json
+++ b/session-adminpanel/package.json
@@ -18,7 +18,8 @@
     "nodemailer": "^7.0.2",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sweetalert2": "^11.22.0"
   },
   "description": ""
 }
